--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "![Design preview for the NFT preview card component coding challenge](./design/desktop-preview.jpg)",
   "main": "index.html",
   "scripts": {
-    "build:styles": "tailwindcss build styles.css -o styles.css"
+    "build:styles": "tailwindcss build -i ./src/css/styles.css -o ./dist/styles.css"
   },
   "author": "",
   "license": "ISC",
