--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "![Design preview for the NFT preview card component coding challenge](./design/desktop-preview.jpg)",
   "main": "index.html",
   "scripts": {
-    "build:styles": "tailwindcss build -i ./src/css/styles.css -o ./dist/styles.css"
+    "build": "mkdir dist && cp -R ./src/* ./dist && tailwindcss -i ./src/css/styles.css -o ./dist/styles.css"
   },
   "author": "",
   "license": "ISC",
@@ -12,3 +12,4 @@
     "tailwindcss": "^3.3.2"
   }
 }
+
